# neural-network

./: .gitignore  .prettierrc  README.md  babel.config.json  index.html  index.ts  mixedNationalInstituteOfStandardsAndTechnologyReader.ts  network.test.ts  network.ts  publish-gh-pages.sh  typings.d.ts  typings.ts  ui.js  ui.ts
rust/: Cargo.toml
rust/src/: lib.rs  network.rs
