[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
evalexpr = "12.0.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.5.0"
web-sys = { version = "0.3.76", features = ["console"] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
